--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeremias Erbs <jerry@badabam.de> (http://www.badabam.de/)",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "parcel-bundler": "1.12.4"
+  }
 }
