--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "A simple quiz app",
   "main": "index.html",
   "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeremias Erbs <jerry@badabam.de> (http://www.badabam.de/)",
   "license": "UNLICENSED",
   "dependencies": {
     "parcel-bundler": "1.12.4"
+  },
+  "devDependencies": {
+    "sass": "1.26.5"
   }
 }
